# Aevrix

./: .gitignore  Aevrix.sln  README.md
engine/: Cargo.toml  build.rs  rust-toolchain.toml
engine/.cargo/: config.toml
engine/crates/hb_cli/: Cargo.toml
engine/crates/hb_cli/src/: main.rs
engine/crates/hb_compositor/: Cargo.toml
engine/crates/hb_compositor/src/: lib.rs  rect.wgsl  renderer.rs  surface.rs  text.wgsl
engine/crates/hb_core/: Cargo.toml
engine/crates/hb_core/src/: dom_types.rs  error.rs  layout_types.rs  lib.rs  net_types.rs
engine/crates/hb_css/: Cargo.toml
engine/crates/hb_css/src/: cascade.rs  lib.rs  parser.rs  selectors.rs
engine/crates/hb_ffi/: Cargo.toml  build.rs
engine/crates/hb_ffi/include/: hb_ffi.h
engine/crates/hb_ffi/src/: lib.rs
engine/crates/hb_graphics/: Cargo.toml
engine/crates/hb_graphics/src/: glyph_cache.rs  image_decode.rs  lib.rs
engine/crates/hb_html/: Cargo.toml
engine/crates/hb_html/src/: lib.rs  tokenizer.rs  tree_builder.rs
engine/crates/hb_layout/: Cargo.toml
engine/crates/hb_layout/src/: block.rs  inline.rs  layout_tree.rs  lib.rs
engine/crates/hb_layout/src/fonts/: atlas.rs  shaping.rs
engine/crates/hb_net/: Cargo.toml
engine/crates/hb_net/src/: lib.rs
src/Aevrix.App/: Aevrix.App.csproj  App.axaml  App.axaml.cs  Program.cs  app.manifest
src/Aevrix.App/Interop/: NativeLibraryResolver.cs  PlatformPaths.cs
src/Aevrix.App/Models/: TabModel.cs
src/Aevrix.App/Services/: NavigationService.cs  SettingsService.cs
src/Aevrix.App/Services/EngineHost/: EngineCallbacks.cs  EngineMarshaller.cs  EngineNative.cs
src/Aevrix.App/Styles/: Colors.axaml  Controls.axaml  Theme.axaml
src/Aevrix.App/ViewModels/: ShellViewModel.cs  TabViewModel.cs
src/Aevrix.App/Views/: ShellView.axaml  ShellView.axaml.cs  TabView.axaml  TabView.axaml.cs
tests/dotnet/Hummingbird.App.Tests/: FirstPaintTests.cs  Hummingbird.App.Tests.csproj
tests/rust/hb_layout_tests/: Cargo.toml
tests/rust/hb_layout_tests/src/: layout_smoke.rs
