[workspace]
resolver = "2"
members = ["crates/*"]
[workspace.package]
version = "0.1.0"
edition = "2021"
[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.21"
url = "2.5"
bitflags = "2.6"
smallvec = "1.13"
tracing = { version = "0.1", features = ["log"] }
log = "0.4"
anyhow = "1.0"
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
[workspace.lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"
rust_2018_idioms = "warn"
[workspace.metadata.aevrix]
telemetry = false
sri_by_default = true
capability_gated_scripting = true
site_isolation = true
