[package]
name = "hb_core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Aevrix headless core: minimal static HTML/CSS -> first paint, deterministic & privacy-first."
repository = "https://example.com/aevrix"
[features]
default = ["std"]
std = []
deterministic = []
[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
bitflags = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
[dev-dependencies]
pretty_assertions = "1.4"
