[package]
name = "hb_ffi"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Aevrix FFI cdylib: C ABI for init, load, render."
repository = "https://example.com/aevrix"
links = "hb_ffi"
[lib]
crate-type = ["cdylib"]
[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
hb_html = { path = "../hb_html" }
hb_css = { path = "../hb_css" }
hb_layout = { path = "../hb_layout" }
hb_graphics = { path = "../hb_graphics" }
once_cell = "1.19"
[build-dependencies]
