[package]
name = "hb_graphics"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Aevrix deterministic CPU renderer: RGBA8 raster, glyph cache, basic image decode."
repository = "https://example.com/aevrix"
[features]
default = []
png = ["dep:png"]
jpeg = ["dep:jpeg-decoder"]
gif = ["dep:gif"]
[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
smallvec = { workspace = true }
hb_layout = { path = "../hb_layout" }
font8x8 = "0.3"
png = { version = "0.17", optional = true }
jpeg-decoder = { version = "0.3", optional = true }
gif = { version = "0.12", optional = true }
[dev-dependencies]
pretty_assertions = "1.4"
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
