[package]
name = "hb_layout_tests"
version = "0.1.0"
edition = "2021"
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
hb_html = { path = "../../../engine/crates/hb_html" }
hb_css = { path = "../../../engine/crates/hb_css" }
hb_layout = { path = "../../../engine/crates/hb_layout" }
hb_graphics = { path = "../../../engine/crates/hb_graphics" }
[profile.test]
opt-level = 1
